--- a/avisos.html
+++ b/avisos.html
@@ -8,6 +8,11 @@
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
             rel="stylesheet">
+
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
         <!-- Google Fonts -->
         <link
             href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
@@ -26,6 +31,13 @@
                         href="index.html">
                         Ma. Alejandra Pantano | Mi Cursada 2025
                     </a>
+                    <!-- Botón de modo oscuro / claro-->
+                    <button id="toggle-mode" class="btn btn-mode"
+                        aria-label="Cambiar modo">
+                        <i class="bi bi-moon-fill"></i>
+                    </button>
+                    <!-- Menú hamburguesa-->
+
                     <button class="navbar-toggler ms-auto" type="button"
                         data-bs-toggle="collapse" data-bs-target="#navbarNav">
                         <span class="navbar-toggler-icon"></span>
@@ -121,5 +133,8 @@
         <!-- Bootstrap JS -->
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- JS -->
+        <script src="./js/modo.js"></script>
+
     </body>
 </html>
