--- a/contacto.html
+++ b/contacto.html
@@ -8,6 +8,11 @@
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
             rel="stylesheet">
+
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
         <!-- Google Fonts -->
         <link
             href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
@@ -25,6 +30,13 @@
                         href="index.html">
                         Ma. Alejandra Pantano | Mi Cursada 2025
                     </a>
+                    <!-- Botón de modo oscuro / claro-->
+                    <button id="toggle-mode" class="btn btn-mode"
+                        aria-label="Cambiar modo">
+                        <i class="bi bi-moon-fill"></i>
+                    </button>
+                    <!-- Menú hamburguesa-->
+
                     <button class="navbar-toggler ms-auto" type="button"
                         data-bs-toggle="collapse" data-bs-target="#navbarNav">
                         <span class="navbar-toggler-icon"></span>
@@ -50,11 +62,11 @@
         <main class="container my-5 flex-grow-1">
             <h1 class="text-center mb-4 titulo-principal">Estemos en
                 contacto</h1>
-            <p class="text-center text-muted subtitulo">Completá el formulario y
+            <p class="text-center subtitulo">Completá el formulario y
                 con gusto te responderé.</p>
 
             <div class="card-formulario">
-                <form>
+                <form id="formulario-contacto" novalidate>
                     <div class="mb-3">
                         <label for="nombre" class="form-label">Nombre</label>
                         <input type="text" class="form-control" id="nombre"
@@ -80,6 +92,7 @@
                         <button type="submit"
                             class="btn btn-custom">Enviar</button>
                     </div>
+                    <div id="mensaje-formulario" class="mt-3 text-center"></div>
                 </form>
             </div>
         </main>
@@ -92,6 +105,11 @@
         <!-- Bootstrap JS -->
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+        <!-- JS -->
+        <script src="./js/form.js"></script>
+
+        <script src="./js/modo.js"></script>
 
     </body>
 </html>
