--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
     <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
@@ -25,6 +29,12 @@
           <a class="navbar-brand fw-bold text-white" href="index.html">
             Ma. Alejandra Pantano | Mi Cursada 2025
           </a>
+          <!-- Botón de modo oscuro / claro-->
+          <button id="toggle-mode" class="btn btn-mode"
+            aria-label="Cambiar modo">
+            <i class="bi bi-moon-fill"></i>
+          </button>
+          <!-- Menú hamburguesa-->
           <button class="navbar-toggler ms-auto" type="button"
             data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
@@ -50,7 +60,7 @@
     <main class="container my-5 flex-grow-1">
       <h1 class="text-center mb-2 titulo-principal">Materias que estoy
         cursando</h1>
-      <p class="text-center text-muted subtitulo">Primer cuatrimestre 2025
+      <p class="text-center subtitulo">Primer cuatrimestre 2025
         · UADE</p>
 
       <div class="table-responsive">
@@ -103,5 +113,9 @@
     <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- JS -->
+    <script src="./js/modo.js"></script>
+
   </body>
 </html>
