--- a/materias2025.html
+++ b/materias2025.html
@@ -8,6 +8,10 @@
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
             rel="stylesheet">
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
         <!-- Google Fonts -->
         <link
             href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
@@ -19,7 +23,7 @@
 
     <body class="d-flex flex-column min-vh-100">
 
-    <!-- NAVBAR -->
+        <!-- NAVBAR -->
         <header class="bg-header p-3">
             <nav class="navbar navbar-expand-lg navbar-dark container">
                 <div class="d-flex w-100 align-items-center">
@@ -27,6 +31,13 @@
                         href="index.html">
                         Ma. Alejandra Pantano | Mi Cursada 2025
                     </a>
+                    <!-- Botón de modo oscuro / claro-->
+                    <button id="toggle-mode" class="btn btn-mode"
+                        aria-label="Cambiar modo">
+                        <i class="bi bi-moon-fill"></i>
+                    </button>
+                    <!-- Menú hamburguesa-->
+
                     <button class="navbar-toggler ms-auto" type="button"
                         data-bs-toggle="collapse" data-bs-target="#navbarNav">
                         <span class="navbar-toggler-icon"></span>
@@ -48,16 +59,16 @@
             </nav>
         </header>
 
-    <!-- MAIN -->
+        <!-- MAIN -->
         <main class="container my-5 flex-grow-1">
             <h1 class="text-center mb-4 titulo-principal">Materias del 1er
                 Cuatrimestre 2025</h1>
-            <p class="text-center text-muted subtitulo">Licenciatura en Gestión
+            <p class="text-center subtitulo">Licenciatura en Gestión
                 IT
                 · UADE</p>
 
             <div class="table-responsive sombra-tabla">
-                <table class="table align-middle text-center">
+                <table class="table align-middle text-center tabla-cursada">
                     <thead class="bg-light-purple">
                         <tr>
                             <th class="text-center">Materia</th>
@@ -91,7 +102,7 @@
             </div>
         </main>
 
-    <!-- FOOTER -->
+        <!-- FOOTER -->
         <footer class="bg-footer text-white text-center p-3 mt-auto">
             <p>Hecho con &#10084; por María Alejandra Pantano</p>
         </footer>
@@ -99,6 +110,9 @@
         <!-- Bootstrap JS -->
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+        <!-- JS -->
+        <script src="./js/modo.js"></script>
 
     </body>
 </html>
