--- a/sobremi.html
+++ b/sobremi.html
@@ -8,6 +8,10 @@
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
             rel="stylesheet">
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
         <!-- Google Fonts -->
         <link
             href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
@@ -25,6 +29,13 @@
                         href="index.html">
                         Ma. Alejandra Pantano | Mi Cursada 2025
                     </a>
+                    <!-- Botón de modo oscuro / claro-->
+                    <button id="toggle-mode" class="btn btn-mode"
+                        aria-label="Cambiar modo">
+                        <i class="bi bi-moon-fill"></i>
+                    </button>
+                    <!-- Menú hamburguesa-->
+
                     <button class="navbar-toggler ms-auto" type="button"
                         data-bs-toggle="collapse" data-bs-target="#navbarNav">
                         <span class="navbar-toggler-icon"></span>
@@ -54,12 +65,13 @@
                 class="container d-flex flex-column align-items-center justify-content-center my-5">
                 <div
                     class="d-flex align-items-center flex-column flex-md-row text-center text-md-start">
-                    <img src="./img/foto perfil CV.jpg" alt="Foto personal"
+                    <img src="./img/AlePantano_FotoPerfil.jpg"
+                        alt="Foto personal"
                         class="foto-perfil me-md-4 mb-3 mb-md-0">
                     <div>
                         <h1 class="nombre-principal">María Alejandra
                             Pantano</h1>
-                        <p class="epigrafe-perfil">Apasionada por la tecnología,
+                        <p class="epigrafe-perfil subtitulo">Apasionada por la tecnología,
                             la calidad y el aprendizaje constante.</p>
                     </div>
                 </div>
@@ -110,6 +122,8 @@
         <!-- Bootstrap JS -->
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- JS -->
+        <script src="./js/modo.js"></script>
 
     </body>
 </html>
