--- a/contacto.html
+++ b/contacto.html
@@ -24,43 +24,64 @@
 
         <!-- NAVBAR -->
         <header class="bg-header p-3">
-            <nav class="navbar navbar-expand-lg navbar-dark container">
-                <div class="d-flex w-100 align-items-center">
+            <nav
+                class="navbar navbar-expand-lg navbar-dark container position-relative">
+                <div
+                    class="d-flex w-100 align-items-center justify-content-between">
+                    <!-- Logo -->
                     <a class="navbar-brand fw-bold text-white"
                         href="index.html">
-                        Ma. Alejandra Pantano | Mi Cursada 2025
+                        Mi Cursada 2025 | UADE
                     </a>
-                    <!-- Botón de modo oscuro / claro-->
+
+                    <!-- Botón hamburguesa -->
+                    <button class="navbar-toggler ms-auto"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#navbarNav"
+                        aria-controls="navbarNav"
+                        aria-expanded="false"
+                        aria-label="Abrir menú de navegación">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+
+                <!-- Botón modo claro/oscuro SIEMPRE visible -->
+                <div class="w-100 d-flex justify-content-end mt-2 d-lg-none">
                     <button id="toggle-mode" class="btn btn-mode"
                         aria-label="Cambiar modo">
                         <i class="bi bi-moon-fill"></i>
                     </button>
-                    <!-- Menú hamburguesa-->
-
-                    <button class="navbar-toggler ms-auto" type="button"
-                        data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
                 </div>
-                <div class="collapse navbar-collapse justify-content-end"
+
+                <!-- Menú colapsable -->
+                <div
+                    class="collapse navbar-collapse justify-content-between align-items-center mt-2 mt-lg-0"
                     id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link text-white"
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link"
                                 href="avisos.html">Avisos</a></li>
-                        <li class="nav-item"><a class="nav-link text-white"
+                        <li class="nav-item"><a class="nav-link"
                                 href="sobremi.html">Sobre mí</a></li>
-                        <li class="nav-item"><a class="nav-link text-white"
+                        <li class="nav-item"><a class="nav-link"
                                 href="materias2025.html">Materias 2025</a></li>
-                        <li class="nav-item"><a class="nav-link text-white"
+                        <li class="nav-item"><a class="nav-link"
                                 href="contacto.html">Contacto</a></li>
                     </ul>
+
+                    <!-- Botón modo claro/oscuro en desktop -->
+                    <button id="toggle-mode-desktop"
+                        class="btn btn-mode d-none d-lg-inline-block ms-3"
+                        aria-label="Cambiar modo">
+                        <i class="bi bi-moon-fill"></i>
+                    </button>
                 </div>
             </nav>
         </header>
 
         <!-- MAIN -->
         <main class="container my-5 flex-grow-1">
-            <h1 class="text-center mb-4 titulo-principal">Estemos en
+            <h1 class="text-center mb-4 nombre-principal">Estemos en
                 contacto</h1>
             <p class="text-center subtitulo">Completá el formulario y
                 con gusto te responderé.</p>
@@ -110,6 +131,49 @@
         <script src="./js/form.js"></script>
 
         <script src="./js/modo.js"></script>
+        <!-- Modal de errores -->
+        <div class="modal fade" id="modalErrores" tabindex="-1"
+            aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content rounded-4 p-4 text-center">
+                    <div class="modal-body">
+                        <div class="mb-3">
+                            <div class="mb-3">
+                                <i
+                                    class="bi bi-info-circle-fill fs-1 text-uva"></i>
+                            </div>
+                            <h5 class="fw-bold mb-3">Nos faltan algunos
+                                datos...</h5>
+                            <ul id="listaErrores"
+                                class="list-unstyled text-start px-3 small"></ul>
+                        </div>
+                        <button type="button" class="btn btn-modal w-100 mt-3"
+                            data-bs-dismiss="modal">Cerrar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Modal de éxito -->
+        <div class="modal fade" id="modalExito" tabindex="-1"
+            aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content rounded-4 p-4 text-center">
+                    <div class="modal-body">
+                        <div class="mb-3">
+                            <i
+                                class="bi bi-check-circle-fill fs-1 text-success"></i>
+                        </div>
+                        <h5 class="fw-bold mb-2">¡Mensaje enviado con
+                            éxito!</h5>
+                        <p class="mb-3">Gracias por contactarme. En breve estaré
+                            respondiendo tu consulta 😊</p>
+                        <button type="button" class="btn btn-modal w-100"
+                            data-bs-dismiss="modal">Cerrar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </body>
+
 </html>
