--- a/materias2025.html
+++ b/materias2025.html
@@ -25,43 +25,64 @@
 
         <!-- NAVBAR -->
         <header class="bg-header p-3">
-            <nav class="navbar navbar-expand-lg navbar-dark container">
-                <div class="d-flex w-100 align-items-center">
+            <nav
+                class="navbar navbar-expand-lg navbar-dark container position-relative">
+                <div
+                    class="d-flex w-100 align-items-center justify-content-between">
+                    <!-- Logo -->
                     <a class="navbar-brand fw-bold text-white"
                         href="index.html">
-                        Ma. Alejandra Pantano | Mi Cursada 2025
+                        Mi Cursada 2025 | UADE
                     </a>
-                    <!-- Botón de modo oscuro / claro-->
+
+                    <!-- Botón hamburguesa -->
+                    <button class="navbar-toggler ms-auto"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#navbarNav"
+                        aria-controls="navbarNav"
+                        aria-expanded="false"
+                        aria-label="Abrir menú de navegación">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+
+                <!-- Botón modo claro/oscuro SIEMPRE visible -->
+                <div class="w-100 d-flex justify-content-end mt-2 d-lg-none">
                     <button id="toggle-mode" class="btn btn-mode"
                         aria-label="Cambiar modo">
                         <i class="bi bi-moon-fill"></i>
                     </button>
-                    <!-- Menú hamburguesa-->
-
-                    <button class="navbar-toggler ms-auto" type="button"
-                        data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
                 </div>
-                <div class="collapse navbar-collapse justify-content-end"
+
+                <!-- Menú colapsable -->
+                <div
+                    class="collapse navbar-collapse justify-content-between align-items-center mt-2 mt-lg-0"
                     id="navbarNav">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link"
                                 href="avisos.html">Avisos</a></li>
                         <li class="nav-item"><a class="nav-link"
                                 href="sobremi.html">Sobre mí</a></li>
-                        <li class="nav-item"><a class="nav-link active"
+                        <li class="nav-item"><a class="nav-link"
                                 href="materias2025.html">Materias 2025</a></li>
                         <li class="nav-item"><a class="nav-link"
                                 href="contacto.html">Contacto</a></li>
                     </ul>
+
+                    <!-- Botón modo claro/oscuro en desktop -->
+                    <button id="toggle-mode-desktop"
+                        class="btn btn-mode d-none d-lg-inline-block ms-3"
+                        aria-label="Cambiar modo">
+                        <i class="bi bi-moon-fill"></i>
+                    </button>
                 </div>
             </nav>
         </header>
 
         <!-- MAIN -->
         <main class="container my-5 flex-grow-1">
-            <h1 class="text-center mb-4 titulo-principal">Materias del 1er
+            <h1 class="text-center mb-4 nombre-principal">Materias del 1er
                 Cuatrimestre 2025</h1>
             <p class="text-center subtitulo">Licenciatura en Gestión
                 IT
@@ -90,8 +111,8 @@
                         <tr>
                             <td>
                                 <a
-                                    href="https://mapantano.github.io/dydwpaginademateria/"
-                                    target="_blank" class="link-materia">
+                                    href="./paginaDyDW.html"
+                                    class="link-materia">
                                     Diseño y Desarrollo Web 🔗
                                 </a>
                             </td>
@@ -104,7 +125,7 @@
 
         <!-- FOOTER -->
         <footer class="bg-footer text-white text-center p-3 mt-auto">
-            <p>Hecho con &#10084; por María Alejandra Pantano</p>
+            <p>Hecho con &#10084; por María Alejandra Pantano </p>
         </footer>
 
         <!-- Bootstrap JS -->
