--- a/sobremi.html
+++ b/sobremi.html
@@ -23,36 +23,57 @@
 
         <!-- NAVBAR -->
         <header class="bg-header p-3">
-            <nav class="navbar navbar-expand-lg navbar-dark container">
-                <div class="d-flex w-100 align-items-center">
+            <nav
+                class="navbar navbar-expand-lg navbar-dark container position-relative">
+                <div
+                    class="d-flex w-100 align-items-center justify-content-between">
+                    <!-- Logo -->
                     <a class="navbar-brand fw-bold text-white"
                         href="index.html">
-                        Ma. Alejandra Pantano | Mi Cursada 2025
+                        Mi Cursada 2025 | UADE
                     </a>
-                    <!-- Botón de modo oscuro / claro-->
+
+                    <!-- Botón hamburguesa -->
+                    <button class="navbar-toggler ms-auto"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#navbarNav"
+                        aria-controls="navbarNav"
+                        aria-expanded="false"
+                        aria-label="Abrir menú de navegación">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+
+                <!-- Botón modo claro/oscuro SIEMPRE visible -->
+                <div class="w-100 d-flex justify-content-end mt-2 d-lg-none">
                     <button id="toggle-mode" class="btn btn-mode"
                         aria-label="Cambiar modo">
                         <i class="bi bi-moon-fill"></i>
                     </button>
-                    <!-- Menú hamburguesa-->
-
-                    <button class="navbar-toggler ms-auto" type="button"
-                        data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
                 </div>
-                <div class="collapse navbar-collapse justify-content-end"
+
+                <!-- Menú colapsable -->
+                <div
+                    class="collapse navbar-collapse justify-content-between align-items-center mt-2 mt-lg-0"
                     id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link text-white"
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link"
                                 href="avisos.html">Avisos</a></li>
-                        <li class="nav-item"><a class="nav-link text-white"
+                        <li class="nav-item"><a class="nav-link"
                                 href="sobremi.html">Sobre mí</a></li>
-                        <li class="nav-item"><a class="nav-link text-white"
+                        <li class="nav-item"><a class="nav-link"
                                 href="materias2025.html">Materias 2025</a></li>
-                        <li class="nav-item"><a class="nav-link text-white"
+                        <li class="nav-item"><a class="nav-link"
                                 href="contacto.html">Contacto</a></li>
                     </ul>
+
+                    <!-- Botón modo claro/oscuro en desktop -->
+                    <button id="toggle-mode-desktop"
+                        class="btn btn-mode d-none d-lg-inline-block ms-3"
+                        aria-label="Cambiar modo">
+                        <i class="bi bi-moon-fill"></i>
+                    </button>
                 </div>
             </nav>
         </header>
@@ -71,7 +92,8 @@
                     <div>
                         <h1 class="nombre-principal">María Alejandra
                             Pantano</h1>
-                        <p class="epigrafe-perfil subtitulo">Apasionada por la tecnología,
+                        <p class="epigrafe-perfil subtitulo">Apasionada por la
+                            tecnología,
                             la calidad y el aprendizaje constante.</p>
                     </div>
                 </div>
